--- a/geo.html
+++ b/geo.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Ubicación desde QR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    #map { height: 90vh; width: 100%; }
-  </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-</head>
-<body>
-  <h2>Ubicación recibida</h2>
-  <div id="map"></div>
+<script>
+  const urlParams = new URLSearchParams(window.location.search);
+  const lat = parseFloat(urlParams.get("lat"));
+  const lng = parseFloat(urlParams.get("lng"));
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // Leer parámetros de la URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const lat = parseFloat(urlParams.get("lat"));
-    const lng = parseFloat(urlParams.get("lng"));
+  if (!isNaN(lat) && !isNaN(lng)) {
+    const map = L.map("map").setView([lat, lng], 15);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "Map data © OpenStreetMap contributors",
+    }).addTo(map);
+    L.marker([lat, lng]).addTo(map).bindPopup("Punto escaneado").openPopup();
 
-    if (!isNaN(lat) && !isNaN(lng)) {
-      const map = L.map("map").setView([lat, lng], 15);
-      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        attribution: "Map data © OpenStreetMap contributors",
-      }).addTo(map);
-      L.marker([lat, lng]).addTo(map).bindPopup("Punto escaneado").openPopup();
-    } else {
-      document.body.innerHTML = "<p>Error: Coordenadas inválidas.</p>";
-    }
-  </script>
-</body>
-</html>
+    // ENVIAR REGISTRO
+    const payload = {
+      lat,
+      lng,
+      timestamp: new Date().toISOString(),
+      userAgent: navigator.userAgent
+    };
+
+    fetch("https://webhook.site/#!/view/c01bf09a-1fe1-4ffa-9070-f27d7357d9af", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(payload)
+    }).catch(err => console.error("Error al enviar datos:", err));
+
+  } else {
+    document.body.innerHTML = "<p>Error: Coordenadas inválidas.</p>";
+  }
+</script>
