--- a/geo.html
+++ b/geo.html
@@ -1,4 +1,20 @@
-<script>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ubicación desde QR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    #map { height: 90vh; width: 100%; }
+  </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+</head>
+<body>
+  <h2>Ubicación recibida</h2>
+  <div id="map"></div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+  <script>
   const urlParams = new URLSearchParams(window.location.search);
   const lat = parseFloat(urlParams.get("lat"));
   const lng = parseFloat(urlParams.get("lng"));
@@ -30,3 +46,5 @@
     document.body.innerHTML = "<p>Error: Coordenadas inválidas.</p>";
   }
 </script>
+</body>
+</html>
