--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       latitud: latitud,
       longitud: longitud,
       hora: hora,
-      dia: dia,
+      dia: diaLocal,
       id_usuario: navigator.userAgent
     };
 
