--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       nombre_punto: nombre_punto || "Desconocido"
     };
 
-    fetch("https://bfa4-143-255-104-133.ngrok-free.app/api/v1/punto/", {
+    fetch("https://537d-2800-300-6ad2-4510-4cfd-c44a-255a-f3e6.ngrok-free.app/api/v1/punto/", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
